--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
             <div class="resume-item">
               <h4>ThinkSwiss Research Scholarship 2022</h4>
               <h5>Summer 2022</h5>
-              <p><em>Awarded my <a href="https://swissnex.org/india/thinkswiss/">Swissnex in India</a></em></p>
+              <p><em>Awarded by <a href="https://swissnex.org/india/thinkswiss/">Swissnex in India</a></em></p>
               <ul>
                 <li>I was awarded the ThinkSwiss Research Scholarship of for a period of three months for a research
                   project in École polytechnique fédérale de Lausanne, Switzerland.</li>
@@ -468,7 +468,7 @@
             <div>
               <h1>Welearn-bot</h1>
               <div>
-                Welearn-bot is a cli application application to interact with welearn in the IISER Kolkata domain.
+                Welearn-bot is a cli application to interact with welearn in the IISER Kolkata domain.
                 The bot was created and is actively maintained by Satvik, Abhay, Amarjeet and I. It can be used to
                 download all the necessary files from welearn, list your assignments, etc. It has google calendar
                 interegrated to directly add due assignments to your calendar.
