--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
               <h3 class="skills-content" style="text-align: center;"><b>HPC</b></h3>
               <div class="skill_icons_container">
                 <a href="https://aws.amazon.com/" style="text-decoration: none;width:70px;">
-                  <img src="https://cdn.icon-icons.com/icons2/2407/PNG/512/aws_icon_146074.png" alt=""
+                  <img src="./assets/img/Amazon_Web_Services_Logo.svg" alt=""
                     style="padding: 10px; width: inherit;">
 
                 </a>
@@ -241,7 +241,7 @@
                 </a>
 
                 <a href="http://www.gnuplot.info/" style="text-decoration: none;width:70px;">
-                  <img src="https://cdn.icon-icons.com/icons2/2107/PNG/512/file_type_gnuplot_icon_130576.png" alt=""
+                  <img src="./assets/img/file_type_gnuplot_icon_130576.png" alt=""
                     style="padding: 10px; width:inherit">
                 </a>
               </div>
