--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
             <div class="resume-item">
               <h4>Conformational Ensemble of the NSP1 CTD in SARS-Cov2: Perspectives from the Free Energy Landscape
               </h4>
-              <h5>In review</h5>
+              <h5><a href="https://doi.org/10.1016/j.bpj.2023.02.010" target="_blank"> 10.1016/j.bpj.2023.02.010</a></h5>
 
               <ul>
                 <li>Dutta, P., Kshirsagar, A., Bibekar, P., Sengupta N,. 2023. In this Study we investigate the
