--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div id="lichess-status">
                         <span id="lichess-status-dot"></span>
                         <span id="lichess-username">Parth_Bibekar</span>
-                        <a id="challenge-me" href="https://lichess.org/?user=Parth_Bibekar" target="_blank">Challenge Me</a>
+                        <a id="challenge-me" href="https://lichess.org/@/Parth_Bibekar" target="_blank">Challenge Me</a>
                     </div>
                     <div id="lichess-ratings">
                         <div class="lichess-rating">
