--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@
             <div class="publication-details">
                 <div class="publication-image">
                     <img src="assets/pesto-carbs-jctc-cover.jpg" alt="PeSTo-Carbs Journal Cover" class="rounded-image">
-                    <p class="image-caption">PeSTo-Carbs as the Journal Cover. Graphic designed by Andrea Vucicevic.</p>
+                    <p class="image-caption">PeSTo-Carbs as the Journal Cover. Graphic designed by <a href="https://theveryspecial.com/" target="_blank" style="color: #a9a9a9;">Andrea Vucicevic</a>.</p>
                 </div>
                 <div class="publication-text">
                     <p><b>Abstract:</b> The Protein Structure Transformer (PeSTo), a geometric transformer, has exhibited exceptional performance in predicting protein–protein binding interfaces and distinguishing interfaces with nucleic acids, lipids, small molecules, and ions. In this study, we introduce PeSTo-Carbs, an extension of PeSTo specifically engineered to predict protein–carbohydrate binding interfaces. We evaluate the performance of this approach using independent test sets and compare them with those of previous methods. Furthermore, we highlight the model’s capability to specialize in predicting interfaces involving cyclodextrins, a biologically and pharmaceutically significant class of carbohydrates. Our method consistently achieves remarkable accuracy despite the scarcity of available structural data for cyclodextrins.</p>
