--- a/publications.html
+++ b/publications.html
@@ -36,18 +36,18 @@
                 <div class="publication-text">
                     <p><b>Abstract:</b> The Protein Structure Transformer (PeSTo), a geometric transformer, has exhibited exceptional performance in predicting protein–protein binding interfaces and distinguishing interfaces with nucleic acids, lipids, small molecules, and ions. In this study, we introduce PeSTo-Carbs, an extension of PeSTo specifically engineered to predict protein–carbohydrate binding interfaces. We evaluate the performance of this approach using independent test sets and compare them with those of previous methods. Furthermore, we highlight the model’s capability to specialize in predicting interfaces involving cyclodextrins, a biologically and pharmaceutically significant class of carbohydrates. Our method consistently achieves remarkable accuracy despite the scarcity of available structural data for cyclodextrins.</p>
                     <div class="project-buttons">
-                        <a href="https://github.com/LBM-EPFL/PeSTo-Carbs" target="_blank"
+                        <a href="https://github.com/your-pesto-carbs-repository" target="_blank"
                             class="project-button">
                             <img src="assets/github-icon-38976.png" alt="GitHub" class="button-icon">
                             <span>Code</span>
                         </a>
-                        <a href="https://doi.org/10.1021/acs.jctc.3c01145" target="_blank" class="project-button">
+                        <a href="#" target="_blank" class="project-button">
                             <span>Paper</span>
                         </a>
-                        <a href="https://pubs.acs.org/toc/jctcce/20/8" target="_blank" class="project-button">
+                        <a href="#" target="_blank" class="project-button">
                             <span>Journal Cover</span>
                         </a>
-                        <a href="https://pesto.epfl.ch/" target="_blank" class="project-button">
+                        <a href="#" target="_blank" class="project-button">
                             <span>Web-server</span>
                         </a>
                     </div>
@@ -67,12 +67,12 @@
                 <div class="publication-text">
                     <p><b>Significance:</b> SARS-CoV-2, the causative agent in the COVID-19 pandemic, encodes 16 mature nonstructural proteins (NSPs) besides the structural proteins that attribute shape to the viral particles. Although an intrinsically disordered region, the NSP1 C-terminal domain (CTD) is reported to block the host mRNA entry channel in the 40S ribosomal subunit by forming a two-helix conformation. Here, we investigate the conformational ensemble of NSP1 CTD to reveal the thermokinetics in its order-disorder transitions. Our analyses determine the existence of two distinct unfolded populations separated by high kinetic barriers from the predominant one that is compatible with complex formation with the ribosome. Structural insights from this study may help identify suitable drugs to impair the ribosomal blocking mechanism.</p>
                     <div class="project-buttons">
-                        <a href="https://github.com/Pallab-Dutta/EMMD" target="_blank"
+                        <a href="https://github.com/your-pesto-carbs-repository" target="_blank"
                             class="project-button">
                             <img src="assets/github-icon-38976.png" alt="GitHub" class="button-icon">
                             <span>Code</span>
                         </a>
-                        <a href="https://doi.org/10.1016/j.bpj.2023.02.010" target="_blank" class="project-button">
+                        <a href="#" target="_blank" class="project-button">
                             <span>Paper</span>
                         </a>
                     </div>
