--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Parth Bibekar</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
@@ -20,6 +21,19 @@
             <li><a href="assets/CV.pdf" target="_blank">CV</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+        <div class="daynight">
+          
+            <label for="checkbox">
+              <input type="checkbox" name="" id="checkbox">
+              <div class="toggle">
+                <div class="cloud"></div>
+                <div class="star"></div>
+                <div class="sea"></div>
+                <div class="mountains"></div>
+              </div>
+            </label>
+          </div>
+        </div>
     </nav>
 
     <main>
@@ -37,10 +51,10 @@
                 <div class="social-media-links">
                     <!-- <h4>Connect:</h4> -->
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/parth-bibekar-a8a2a0247/" target="_blank"><u>LinkedIn</u></a></li>
-                        <li><a href="https://github.com/ParthBibekar" target="_blank"><u>GitHub</u></a></li>
-                        <li><a href="https://x.com/BibekarParth" target="_blank"><u>twitter</u></a></li>
-                        <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank"><u>lichess</u></a></li>
+                        <li><a href="https://www.linkedin.com/in/parth-bibekar-a8a2a0247/" target="_blank" class="custom-link"><u>LinkedIn</u></a></li>
+                        <li><a href="https://github.com/ParthBibekar" target="_blank" class="custom-link"><u>GitHub</u></a></li>
+                        <li><a href="https://x.com/BibekarParth" target="_blank" class="custom-link"><u>twitter</u></a></li>
+                        <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank" class="custom-link"><u>lichess</u></a></li>
                     </ul>
                 </div>
             </div>
