toggle button for pub and contact

--- a/publications.html
+++ b/publications.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Publications</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
@@ -22,19 +23,12 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="container">
-            <div class="daynight">
-          
-              <label for="checkbox">
-                <input type="checkbox" name="" id="checkbox">
-                <div class="toggle">
-                  <div class="cloud"></div>
-                  <div class="star"></div>
-                  <div class="sea"></div>
-                  <div class="mountains"></div>
-                </div>
-              </label>
-            </div>
-          </div>
+            <label class="toggle-label" for="checkbox">
+                <input type="checkbox" id="checkbox">
+                <i class="material-icons sun">wb_sunny</i>
+                <i class="material-icons moon">nightlight_round</i>
+            </label>
+        </div>
     </nav>
 
     <main>
