--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Contact | Parth Bibekar</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
@@ -21,18 +22,12 @@
             <li><a href="assets/CV.pdf" target="_blank">CV</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        <div class="daynight">
-          
-            <label for="checkbox">
-              <input type="checkbox" name="" id="checkbox">
-              <div class="toggle">
-                <div class="cloud"></div>
-                <div class="star"></div>
-                <div class="sea"></div>
-                <div class="mountains"></div>
-              </div>
+        <div class="container">
+            <label class="toggle-label" for="checkbox">
+                <input type="checkbox" id="checkbox">
+                <i class="material-icons sun">wb_sunny</i>
+                <i class="material-icons moon">nightlight_round</i>
             </label>
-          </div>
         </div>
     </nav>
 
