added google analytics

--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3VF1L08YVL');
+</script>
+
 <body>
     <header>
         <h1 class="professional-font">Publications</h1>
