--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3VF1L08YVL');
+</script>
+
+
 <body>
     <header>
         <h1 class="professional-font">Parth Bibekar</h1>
