google analytics in head

--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3VF1L08YVL');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parth Bibekar</title>
@@ -31,15 +40,7 @@
 
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-3VF1L08YVL');
-</script>
 
 
 <body>
@@ -62,8 +63,8 @@
                 <i class="material-icons moon">nightlight_round</i>
             </label>
         </div>
-          
-          
+
+
     </nav>
     <!-- </header> -->
 
@@ -190,7 +191,8 @@
                 <div id="lichess-board-container">
                     <!-- Chess Game Details -->
                     <div id="chess-game-details">
-                        <p><a href="https://www.chessgames.com/perl/chessgame?gid=1125358" target="_blank" class="custom-link">K Gerasimov vs Vasily Smyslov</a></p>
+                        <p><a href="https://www.chessgames.com/perl/chessgame?gid=1125358" target="_blank"
+                                class="custom-link">K Gerasimov vs Vasily Smyslov</a></p>
                         <p>Moscow Pioneer Home Championship (1935), Moscow URS</p>
                         <p>Rubinstein Opening (D05) · 0-1</p>
                     </div>
