--- a/publications.html
+++ b/publications.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3VF1L08YVL');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -9,15 +19,7 @@
     <script defer src="script.js"></script>
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-3VF1L08YVL');
-</script>
 
 <body>
     <header>
@@ -47,17 +49,28 @@
         <!-- PeSTo-Carbs Publication -->
         <section id="pesto-carbs-publication" class="block">
             <h3>PeSTo-Carbs: Geometric Deep Learning for Prediction of Protein−Carbohydrate Binding Interfaces</h3>
-            <p class="publication-authors"><u>Parth Bibekar</u>, Lucien Krapp, Matteo Dal Peraro; Journal of Chemical Theory and Computation, 2024</p>
+            <p class="publication-authors"><u>Parth Bibekar</u>, Lucien Krapp, Matteo Dal Peraro; Journal of Chemical
+                Theory and Computation, 2024</p>
             <div class="publication-details">
                 <div class="publication-image">
                     <img src="assets/pesto-carbs-jctc-cover.jpg" alt="PeSTo-Carbs Journal Cover" class="rounded-image">
-                    <p class="image-caption">PeSTo-Carbs as the Journal Cover. Graphic designed by <a href="https://theveryspecial.com/" target="_blank" class="custom-link">Andrea Vucicevic</a>.</p>
+                    <p class="image-caption">PeSTo-Carbs as the Journal Cover. Graphic designed by <a
+                            href="https://theveryspecial.com/" target="_blank" class="custom-link">Andrea Vucicevic</a>.
+                    </p>
                 </div>
                 <div class="publication-text">
-                    <p><b>Abstract:</b> The Protein Structure Transformer (PeSTo), a geometric transformer, has exhibited exceptional performance in predicting protein–protein binding interfaces and distinguishing interfaces with nucleic acids, lipids, small molecules, and ions. In this study, we introduce PeSTo-Carbs, an extension of PeSTo specifically engineered to predict protein–carbohydrate binding interfaces. We evaluate the performance of this approach using independent test sets and compare them with those of previous methods. Furthermore, we highlight the model’s capability to specialize in predicting interfaces involving cyclodextrins, a biologically and pharmaceutically significant class of carbohydrates. Our method consistently achieves remarkable accuracy despite the scarcity of available structural data for cyclodextrins.</p>
+                    <p><b>Abstract:</b> The Protein Structure Transformer (PeSTo), a geometric transformer, has
+                        exhibited exceptional performance in predicting protein–protein binding interfaces and
+                        distinguishing interfaces with nucleic acids, lipids, small molecules, and ions. In this study,
+                        we introduce PeSTo-Carbs, an extension of PeSTo specifically engineered to predict
+                        protein–carbohydrate binding interfaces. We evaluate the performance of this approach using
+                        independent test sets and compare them with those of previous methods. Furthermore, we highlight
+                        the model’s capability to specialize in predicting interfaces involving cyclodextrins, a
+                        biologically and pharmaceutically significant class of carbohydrates. Our method consistently
+                        achieves remarkable accuracy despite the scarcity of available structural data for
+                        cyclodextrins.</p>
                     <div class="project-buttons">
-                        <a href="https://github.com/LBM-EPFL/PeSTo-Carbs" target="_blank"
-                            class="project-button">
+                        <a href="https://github.com/LBM-EPFL/PeSTo-Carbs" target="_blank" class="project-button">
                             <img src="assets/github-icon-38976.png" alt="GitHub" class="button-icon">
                             <span>Code</span>
                         </a>
@@ -78,17 +91,25 @@
         <!-- RISoTTo Publication -->
         <section id="pesto-carbs-publication" class="block">
             <h3>Conformational ensemble of the NSP1 CTD in SARS-CoV-2: Perspectives from the free energy landscape</h3>
-            <p class="publication-authors">Pallab Dutta, Abhay Kshirsagar, <u>Parth Bibekar</u>, Neelanjana Sengupta; Biophysical Journal, 2023</p>
+            <p class="publication-authors">Pallab Dutta, Abhay Kshirsagar, <u>Parth Bibekar</u>, Neelanjana Sengupta;
+                Biophysical Journal, 2023</p>
             <div class="publication-details">
                 <!-- <div class="publication-image">
                     <img src="assets/pesto-carbs-jctc-cover.jpg" alt="PeSTo-Carbs Journal Cover" class="rounded-image">
                     <p class="image-caption">PeSTo-Carbs as the Journal Cover. Graphic designed by Andrea Vucicevic.</p>
                 </div> -->
                 <div class="publication-text">
-                    <p><b>Significance:</b> SARS-CoV-2, the causative agent in the COVID-19 pandemic, encodes 16 mature nonstructural proteins (NSPs) besides the structural proteins that attribute shape to the viral particles. Although an intrinsically disordered region, the NSP1 C-terminal domain (CTD) is reported to block the host mRNA entry channel in the 40S ribosomal subunit by forming a two-helix conformation. Here, we investigate the conformational ensemble of NSP1 CTD to reveal the thermokinetics in its order-disorder transitions. Our analyses determine the existence of two distinct unfolded populations separated by high kinetic barriers from the predominant one that is compatible with complex formation with the ribosome. Structural insights from this study may help identify suitable drugs to impair the ribosomal blocking mechanism.</p>
+                    <p><b>Significance:</b> SARS-CoV-2, the causative agent in the COVID-19 pandemic, encodes 16 mature
+                        nonstructural proteins (NSPs) besides the structural proteins that attribute shape to the viral
+                        particles. Although an intrinsically disordered region, the NSP1 C-terminal domain (CTD) is
+                        reported to block the host mRNA entry channel in the 40S ribosomal subunit by forming a
+                        two-helix conformation. Here, we investigate the conformational ensemble of NSP1 CTD to reveal
+                        the thermokinetics in its order-disorder transitions. Our analyses determine the existence of
+                        two distinct unfolded populations separated by high kinetic barriers from the predominant one
+                        that is compatible with complex formation with the ribosome. Structural insights from this study
+                        may help identify suitable drugs to impair the ribosomal blocking mechanism.</p>
                     <div class="project-buttons">
-                        <a href="https://github.com/Pallab-Dutta/EMMD" target="_blank"
-                            class="project-button">
+                        <a href="https://github.com/Pallab-Dutta/EMMD" target="_blank" class="project-button">
                             <img src="assets/github-icon-38976.png" alt="GitHub" class="button-icon">
                             <span>Code</span>
                         </a>
@@ -100,7 +121,7 @@
             </div>
         </section>
 
-        
+
     </main>
 
     <footer>
@@ -115,4 +136,5 @@
         <p style="font-size: small; color: #a9a9a9;">Made with ❤️ by Parth Bibekar</p>
     </footer>
 </body>
+
 </html>
