--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3VF1L08YVL');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -9,15 +19,7 @@
     <script defer src="script.js"></script>
 </head>
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-3VF1L08YVL"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-3VF1L08YVL');
-</script>
 
 <body>
     <header>
@@ -46,21 +48,28 @@
         <section id="contact" class="contact-section">
             <div class="contact-map">
                 <!-- Replace with your map iframe -->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2411.0818118057937!2d6.564429693568834!3d46.5199051638887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c30fdddeca23f%3A0xbbcc34ab7f93b272!2sSwiss%20Federal%20Institute%20of%20Technology%20Lausanne!5e0!3m2!1sen!2sin!4v1720402516108!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2411.0818118057937!2d6.564429693568834!3d46.5199051638887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c30fdddeca23f%3A0xbbcc34ab7f93b272!2sSwiss%20Federal%20Institute%20of%20Technology%20Lausanne!5e0!3m2!1sen!2sin!4v1720402516108!5m2!1sen!2sin"
+                    width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
             <div class="contact-details">
                 <h2>Contact Details</h2>
                 <!-- <p><strong>Name:</strong> Parth Bibekar</p> -->
                 <p><strong>Office:</strong> AAB 0 43, Station 19, EPFL, Lausanne 1015, Switzerland</p>
-                <p><img src="assets/mail_1324120.png" alt="Email" style="width: 20px; padding-right: 10px;"><u>parth.bibekar@epfl.ch</u></p>
+                <p><img src="assets/mail_1324120.png" alt="Email"
+                        style="width: 20px; padding-right: 10px;"><u>parth.bibekar@epfl.ch</u></p>
                 <p><strong>Connect:</strong></p>
                 <div class="social-media-links">
                     <!-- <h4>Connect:</h4> -->
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/parth-bibekar-a8a2a0247/" target="_blank" class="custom-link"><u>LinkedIn</u></a></li>
-                        <li><a href="https://github.com/ParthBibekar" target="_blank" class="custom-link"><u>GitHub</u></a></li>
-                        <li><a href="https://x.com/BibekarParth" target="_blank" class="custom-link"><u>twitter</u></a></li>
-                        <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank" class="custom-link"><u>lichess</u></a></li>
+                        <li><a href="https://www.linkedin.com/in/parth-bibekar-a8a2a0247/" target="_blank"
+                                class="custom-link"><u>LinkedIn</u></a></li>
+                        <li><a href="https://github.com/ParthBibekar" target="_blank"
+                                class="custom-link"><u>GitHub</u></a></li>
+                        <li><a href="https://x.com/BibekarParth" target="_blank" class="custom-link"><u>twitter</u></a>
+                        </li>
+                        <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank"
+                                class="custom-link"><u>lichess</u></a></li>
                     </ul>
                 </div>
             </div>
@@ -79,4 +88,5 @@
         </ul> -->
     </footer>
 </body>
+
 </html>
