--- a/contact.html
+++ b/contact.html
@@ -66,10 +66,12 @@
                                 class="custom-link"><u>LinkedIn</u></a></li>
                         <li><a href="https://github.com/ParthBibekar" target="_blank"
                                 class="custom-link"><u>GitHub</u></a></li>
-                        <li><a href="https://x.com/BibekarParth" target="_blank" class="custom-link"><u>twitter</u></a>
+                        <li><a href="https://x.com/BibekarParth" target="_blank" class="custom-link"><u>Twitter</u></a>
                         </li>
+                        <li><a href="https://www.threads.net/@parthbibekar" target="_blank"
+                                class="custom-link"><u>Threads</u></a></li>
                         <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank"
-                                class="custom-link"><u>lichess</u></a></li>
+                                class="custom-link"><u>Lichess</u></a></li>
                     </ul>
                 </div>
             </div>
