--- a/index.html
+++ b/index.html
@@ -258,8 +258,9 @@
         <ul>
             <li><a href="https://github.com/ParthBibekar" target="_blank">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/parth-bibekar-a8a2a0247/" target="_blank">LinkedIn</a></li>
-            <li><a href="https://x.com/BibekarParth" target="_blank">twitter</a></li>
-            <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank">lichess</a></li>
+            <li><a href="https://x.com/BibekarParth" target="_blank">Twitter</a></li>
+            <li><a href="https://www.threads.net/@parthbibekar" target="_blank">Threads</a></li>
+            <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank">Lichess</a></li>
             <!-- Add other social media links -->
         </ul>
         <p style="font-size: small; color: #a9a9a9;">Made with ❤️ by Parth Bibekar</p>
