google scholar profile

--- a/publications.html
+++ b/publications.html
@@ -45,6 +45,11 @@
     </nav>
 
     <main>
+        <div>
+            <a href="https://scholar.google.com/citations?user=Sx6KhU4AAAAJ&hl=en" target="_blank" class="custom-link">
+                <img src="assets/Google_Scholar_logo.svg" alt="Google Scholar" style="width:20px; height:20px; vertical-align:middle; margin-right:8px;">Parth Bibekar
+            </a>
+        </div>
 
         <!-- PeSTo-Carbs Publication -->
         <section id="pesto-carbs-publication" class="block">
