--- a/index.html
+++ b/index.html
@@ -71,11 +71,10 @@
     <main>
         <section id="about" class="block">
             <h2>About Me</h2>
-            <p>Hi, I'm Parth. I am an incoming PhD student at the <a href="https://www.epfl.ch/labs/lbm/"
+            <p>Hi, I'm Parth. I am a PhD candidate at the <a href="https://www.epfl.ch/labs/lbm/"
                     target="_blank" class="custom-link">Laboratory for Biomolecular Modeling</a>
                 at EPFL. My research interests include applications of machine learning in structural bioinformatics,
-                computational
-                biophysics and integrative modeling. I enjoy playing chess, traveling, reading, and building things.</p>
+                computational biophysics and integrative modeling. I enjoy playing chess, traveling, reading, and building things.</p>
 
             <h3>Education</h3>
             <div class="education">
@@ -84,7 +83,8 @@
                         <img src="assets/epfl-logo-new.svg" alt="EPFL Logo" class="education-logo">
                     </a>
                     <div class="details">
-                        <p>PhD in Computational and Quantitative Biology, September 2024 - Present</p>
+                        <p>PhD in Computational and Quantitative Biology</p>
+                        <p>September 2024 - Present</p>
                         <p>Institute of Bioengineering, SV, EPFL, Switzerland</p>
                         <p><strong>Advisor:</strong> Prof. Matteo Dal Peraro</p>
                     </div>
@@ -96,6 +96,7 @@
                     <div class="details">
                         <p>BS-MS (Bachelor's and Master's dual degree) in Biology with a minor in Computational and Data
                             Sciences</p>
+                        <p>2019 - 2024</p>
                         <p>IISER Kolkata, India</p>
                         <p><strong>MS Thesis:</strong> Applications of Geometric Deep Learning for Biomolecular
                             Structure Modeling</p>
