--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                     <div id="lichess-info-box">
                         <div id="lichess-status">
                             <span id="lichess-status-dot"></span>
-                            <span id="lichess-username">Parth_Bibekar</span>
-                            <a id="challenge-me" href="https://lichess.org/@/Parth_Bibekar" target="_blank">Challenge
+                            <span id="lichess-username">Parth_b</span>
+                            <a id="challenge-me" href="https://lichess.org/@/Parth_b" target="_blank">Challenge
                                 Me</a>
                         </div>
                         <div id="lichess-ratings">
@@ -261,7 +261,7 @@
             <li><a href="https://www.linkedin.com/in/parth-bibekar-a8a2a0247/" target="_blank">LinkedIn</a></li>
             <li><a href="https://x.com/BibekarParth" target="_blank">Twitter</a></li>
             <li><a href="https://www.threads.net/@parthbibekar" target="_blank">Threads</a></li>
-            <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank">Lichess</a></li>
+            <li><a href="https://lichess.org/@/Parth_b" target="_blank">Lichess</a></li>
             <!-- Add other social media links -->
         </ul>
         <p style="font-size: small; color: #a9a9a9;">Made with ❤️ by Parth Bibekar</p>
