--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
                         </li>
                         <li><a href="https://www.threads.net/@parthbibekar" target="_blank"
                                 class="custom-link"><u>Threads</u></a></li>
-                        <li><a href="https://lichess.org/@/Parth_Bibekar" target="_blank"
+                        <li><a href="https://lichess.org/@/Parth_b" target="_blank"
                                 class="custom-link"><u>Lichess</u></a></li>
                     </ul>
                 </div>
