--- a/publications.html
+++ b/publications.html
@@ -135,7 +135,7 @@
             <li><a href="https://github.com/ParthBibekar" target="_blank">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/parth-bibekar-a8a2a0247/" target="_blank">LinkedIn</a></li>
             <li><a href="https://x.com/BibekarParth" target="_blank">Twitter</a></li>
-            <li><a href="https://www.threads.net/@parthbibekar" target="_blank">Threads</a></li>
+            <li><a href="https://bsky.app/profile/parthbibekar.bsky.social" target="_blank">Bluesky</a></li>
             <li><a href="https://lichess.org/@/Parth_b" target="_blank">Lichess</a></li>
             <!-- Add other social media links -->
         </ul>
