--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,8 @@
                                 class="custom-link"><u>GitHub</u></a></li>
                         <li><a href="https://x.com/BibekarParth" target="_blank" class="custom-link"><u>Twitter</u></a>
                         </li>
-                        <li><a href="https://www.threads.net/@parthbibekar" target="_blank"
-                                class="custom-link"><u>Threads</u></a></li>
+                        <li><a href="https://bsky.app/profile/parthbibekar.bsky.social" target="_blank"
+                                class="custom-link"><u>Bluesky</u></a></li>
                         <li><a href="https://lichess.org/@/Parth_b" target="_blank"
                                 class="custom-link"><u>Lichess</u></a></li>
                     </ul>
