--- a/publications.html
+++ b/publications.html
@@ -32,6 +32,7 @@
             <!-- <li><a href="about.html">About Me</a></li> -->
             <!-- <li><a href="projects.html">Projects</a></li> -->
             <li><a href="publications.html">Publications</a></li>
+            <li><a href="blogs.html">Blogs</a></li>
             <li><a href="assets/CV.pdf" target="_blank">CV</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
