fixed Lucien middle name

--- a/publications.html
+++ b/publications.html
@@ -76,7 +76,7 @@
                     design
                 </h3>
                 <p class="publication-authors">
-                    <u>Parth Bibekar</u>, Lucien Krapp, Matteo Dal Peraro;
+                    <u>Parth Bibekar</u>, Lucien F. Krapp, Matteo Dal Peraro;
                     bioRxiv, 2025
                 </p>
                 <div class="publication-details">
@@ -131,7 +131,7 @@
                     Protein−Carbohydrate Binding Interfaces
                 </h3>
                 <p class="publication-authors">
-                    <u>Parth Bibekar</u>, Lucien Krapp, Matteo Dal Peraro;
+                    <u>Parth Bibekar</u>, Lucien F. Krapp, Matteo Dal Peraro;
                     Journal of Chemical Theory and Computation, 2024
                 </p>
                 <div class="publication-details">
