--- a/publications.html
+++ b/publications.html
@@ -113,7 +113,19 @@
                         </p>
                         <div class="project-buttons">
                             <a
-                                href="https://www.biorxiv.org/content/10.1101/2025.06.21.660801v1"
+                                href="https://github.com/LBM-EPFL/RISoTTo"
+                                target="_blank"
+                                class="project-button"
+                            >
+                                <img
+                                    src="assets/github-icon-38976.png"
+                                    alt="GitHub"
+                                    class="button-icon"
+                                />
+                                <span>Code</span>
+                            </a>
+                            <a
+                                href="https://doi.org/10.1101/2025.06.21.660801"
                                 target="_blank"
                                 class="project-button"
                             >
